modification dokerfile et pom.xml